--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <button class="option" id="op3">Option 3</button>
 <button class="option" id="op4">Option 4</button>
 </div>
+<div class="result"></div>
 <div class="navigation">
-    <div id="resultDisplay"></div>
 <button class="prev">Previous</button>
 <button class="next">Next</button>
 <button class="evaluate">Evaluate</button>
